<resources>
    <string name="pnlAdm">Painel Administrativo</string>
    <string name="pnlCadastro">Cadastre-se</string>
    <string name="btnCadastro">Cadatre-se</string>
    <string name="btnEntrar">Entrar</string>
    <string name="title_activity_cliente">Cliente</string>
    <string name="title_activity_prestador">Prestador</string>
    <string name="title_activity_administrador">Administrador</string>
    <string name="title_activity_login">Acesse o Sistema</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_prestador">Prestador</string>
    <string name="title_cliente">Cliente</string>
    <string name="title_ordempagamento">Ordem de Pagamento </string>
    <string name="title_tipoprestador">Tipo de Prestadores</string>
    <string name="title_activity_tordempagamento">Ordens de Pagamentos</string>
    <string name="txtTPDesc">Tipo de Prestador</string>
    <string name="cardPrestador">Prestador</string>
    <string name="cardTipoPrestador">Tipo de Prestador</string>
    <string name="cardOrdemPagamento">Ordem de Pagamento</string>
    <string name="cardCliente">Cliente</string>
    <string name="cardOrdemServico">Ordem de Serviço</string>
    <string name="cardSolicitacaoServico">Solicitação de Servico</string>
    <string name="title_activity_ttipo_prestador">Tipo de prestador</string>
    <string name="txtAddTpDesc">Descrição do Tipo Prestaor</string>
    <string name="rbTpAtivo">Ativo</string>
    <string name="rbTpDesabilitado">Desabilitado</string>
    <string name="btnAdicionar">Adicionar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="btnRemover">Remover</string>
    <string name="btnAlterar">Alterar</string>
    <string name="llAddTP">Cadastro Tipo de Prestador</string>
    <string name="txtCodigo">Código:</string>
    <string name="llEditTP">Editar Tipo de Prestador</string>
    <string name="txtDescTP">Descrição:</string>
    <string name="txtId">Código:</string>
    <string name="txtTPAtivo">Situação:</string>
    <string name="lbl_nome">Nome</string>
    <string name="title_menu_salvar">Salvar</string>
    <string name="title_menu_cancelar">Cancelar</string>
    <string name="teste">teste</string>
    <string name="lbl_cpf_cnpj">CPF / CNPJ</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_telefone">Telefone</string>
    <string name="lbl_data_nascimento">Data Nascimento</string>
    <string name="lbl_Identidade">Identidade</string>
    <string name="lbl_codigo_banco">Codigo Banco</string>
    <string name="lbl_agencia">Agencia</string>
    <string name="lbl_conta">Conta</string>
    <string name="title_menu_cad_cli">Cadastro Cliente</string>
    <string name="title_activity_tsolicitacao">Solicitações Cadastradas</string>
    <string name="title_activity_tordemservico">Ordens de Serviço</string>
    <string name="title_activity_edit_solicitacao">EditSolicitacao</string>
    <string name="txtDescCliente">Desc. Cliente:</string>
    <string name="txtData">Data:</string>
    <string name="tbTSolicitacao">Solicitações</string>
    <string name="txtDescSolic">Desc. da Solicitacao:</string>
    <string name="llDetSolicitacao">Detalhamento da Solicitação</string>
    <string name="btnSCancelar">Cancelar</string>
    <string name="txtSDCod">Código</string>
    <string name="txtSDData">Data</string>
    <string name="txtSDStatus">Status</string>
    <string name="txtSDCliente">Cliente</string>
    <string name="txtSDEndereco">Endereço</string>
    <string name="txtSDDescricao">Descrição de Serviço</string>
    <string name="lbl_banco">Banco</string>
    <string name="lblTipoPrestador">TipoPrestador</string>
    <string name="lblDataCadastro">DataCadastro</string>
    <string name="title_menu_cad_pres">Cadastro Prestador</string>
    <string name="app_name">Contrato</string>
    <string name="pnlCliente">Painel do Cliente</string>
    <string name="pnlPrestador">Painel do Prestador</string>
    <string name="btnLogin">Acessar</string>
    <string name="cardPCSolicitacoes">Minhas Solicitações</string>
    <string name="cardPCOrdemServico">Minhas Ordens de Serviço</string>
    <string name="cardPPOrdemServico">Minhas Ordens de Serviço</string>
    <string name="cardPPSolicitacoes">Solicitações em aberto</string>
    <string name="llDetOrdemPagamento">Detalhamento da Ordem de Pagamento</string>
    <string name="llDetOrdemServico">Detalhamento da Ordem de Serviço</string>
    <string name="txtOSPrestador">Prestador:</string>
    <string name="txtOSCliente">Cliente:</string>
    <string name="txtOSCod">Código</string>
    <string name="txtOSData">Data</string>
    <string name="txtOSStatus">Status</string>
    <string name="txtOSEndereco">Endereço</string>
    <string name="txtOSDescricao">Descrição de Serviço</string>
    <string name="txtValor">Valor: </string>
    <string name="txtOPCod">Código</string>
    <string name="txtOPData">Data</string>
    <string name="txtOPDataPagamento">Data Pagamento</string>
    <string name="txtOPPrestador">Prestador </string>
    <string name="txtOPCliente">Cliente </string>
    <string name="txtOPDescricao">Descrição de Serviço</string>
    <string name="btnOSCancelar">Cancelar</string>
    <string name="btnOPPagar">Pagar</string>
    <string name="title_activity_painel_cliente">Painel Cliente</string>
    <string name="title_activity_cadastro_cliente">Cadastro de Cliente</string>
    <string name="txtLSenha">Senha</string>
    <string name="txtLUsuario">Usuário</string>
    <string name="txtLTipo">Tipo de Acesso</string>
    <string name="txtEstado">Estado</string>
    <string name="txtCidade">Cidade</string>
    <string name="txtCEP">CEP</string>
    <string name="txtLogradouro">Logradouro</string>
    <string name="lbl_endereco">Endereço</string>
    <string-array name="listLogin">
        <item>Selecione o tipo</item>
        <item>Administrador</item>
        <item>Cliente</item>
        <item>Prestador</item>
    </string-array>
    <string name="title_activity_tminhas_solicitacoes">Minhas Solicitações</string>
    <string name="title_activity_tsolicitacoes_aberto">Solicitações Aguard. Orçamento</string>
    <string name="title_activity_tsolicitacoes">Solicitações Cadastradas</string>
    <string name="txtAddSolicitacao">Descreva sua necessidade</string>
    <string name="llAddSol">Nova Solicitacao</string>
    <string name="txtaddSolTP">Escolha o tipo de prestador</string>
    <string name="txtTpPrestador">Tipo de Prestador: </string>
    <string name="btnEditSolAprovar">Aprovar Orçamento</string>
    <string name="btnEditSolCancelar">Cancelar Solicitação </string>
    <string name="txtSolCod">Código</string>
    <string name="txtSolData">Data</string>
    <string name="txtSolStatus">Status</string>
    <string name="txtSolDesc">Descrição</string>
    <string name="txtSolTP">Tipo de Prestador</string>
    <string name="txtSolValor">Valor</string>
    <string name="llEditSolCabec">Dados da Solicitação</string>
    <string name="title_activity_tsolicitacoesabertas">Solitações em Aberto</string>
    <string name="txtSolValorPrestador">Informe o valor do serviço: </string>
    <string name="txtSolCodP">Codigo </string>
    <string name="txtSolDataP">Data </string>
    <string name="txtSolStatusP">Status </string>
    <string name="txtSolDescP">Descrição </string>
    <string name="txtSolEndP">Endereço</string>
    <string name="txtSenha">Senha</string>
    <string name="txtConfirmarSenha">Confirmar Senha</string>
    <string name="txtSolValorP">Informe o valor do serviço </string>
    <string name="btnEditSolValor">Propor valor</string>
    <string name="txtTPCPFCNPJ">Tipo de Cliente</string>
    <string name="rbCPF">CPF</string>
    <string name="rbCNPJ">CNPJ</string>

</resources>
