<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    tools:ignore="MissingDefaultResource">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lbl_nome" />

      <EditText
          android:id="@+id/edtNome"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lbl_cpf_cnpj" />

      <EditText
          android:id="@+id/edtCpf_Cpnpj"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="number" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lbl_email" />

      <EditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textEmailAddress" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lbl_telefone" />

      <EditText
          android:id="@+id/edtTelefone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="number" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/lbl_Identidade" />

      <EditText
          android:id="@+id/edtIdentidade"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="number" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txtLogradouro" />

      <EditText
          android:id="@+id/edtLogradouro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txtCEP" />

      <EditText
          android:id="@+id/edtCEP"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="number" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txtCidade" />

      <EditText
          android:id="@+id/edtCidade"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/txtEstado" />

      <EditText
          android:id="@+id/edtEstado"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <Button
          android:id="@+id/button3"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="adicionarCli"
          android:text="@string/btnAdicionar"/>

      <Button
          android:id="@+id/button4"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="limparCli"
          android:text="@string/btnLimpar" />

    </LinearLayout>

  </ScrollView>

</RelativeLayout>
