<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:id="@+id/svp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_nome" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtCpf_Cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_cpf_cnpj" />

            <EditText
                android:id="@+id/edtCpf_Cpnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/txtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_telefone" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/txtData_Nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_data_nascimento" />

            <EditText
                android:id="@+id/edtDataNascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <TextView
                android:id="@+id/txtIdentidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_Identidade" />

            <EditText
                android:id="@+id/edtIdentidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_endereco" />

            <EditText
                android:id="@+id/edtEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtBanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_banco" />

            <Spinner
                android:id="@+id/spinnerBanco"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/txtAgencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_agencia" />

            <EditText
                android:id="@+id/edtAgencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_conta" />

            <EditText
                android:id="@+id/edtConta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtTipoPrestador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTipoPrestador" />

            <Spinner
                android:id="@+id/spinnerTipoPrestador"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/txtData_Cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblDataCadastro" />

            <EditText
                android:id="@+id/edtDataCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="limparPres"
                android:text="@string/btnLimpar" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="adicionarPres"
                android:text="@string/btnAdicionar" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>

