<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
        android:id="@+id/EditSolCabecalho"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="10dip">

        <TextView android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:text="@string/llEditSolCabec" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llSol"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/EditSolCabecalho">

        <TextView
            android:id="@+id/txtView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolCod"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolCod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolData"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolStatus"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolDesc"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolTP"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSolValor"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtSolValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <Button
            android:id="@+id/btnEditSolAprovar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="aprovarSolicitacao"
            android:enabled="false"
            android:text="@string/btnEditSolAprovar" />

        <Button
            android:id="@+id/btnEditSolCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelarSolicitacao"
            android:enabled="false"
            android:text="@string/btnEditSolCancelar" />

    </LinearLayout>

</RelativeLayout>