<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <LinearLayout android:layout_width="fill_parent"
        android:id="@+id/AddTpcabecalho"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:padding="10dip">

        <TextView android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:text="@string/llDetOrdemPagamento" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/llOS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/AddTpcabecalho">

        <TextView
            android:id="@+id/txtView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPCod"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPCod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPData"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPDataPagamento"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPDataPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtValor"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPCliente"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPPrestador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPPrestador"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOPDescricao"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtOPDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:padding="10dip">

        <Button
            android:id="@+id/btnOPPagar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="pagar"
            android:enabled="false"
            android:text="@string/btnOPPagar" />

    </LinearLayout>

</RelativeLayout>