<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/AddTpcabecalho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dip">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:text="@string/llAddTP"
            android:textColor="#FFFFFF" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AddTpcabecalho"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtAddTpDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txtAddTpDesc"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/rbGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbTPAtivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbTpAtivo" />

            <RadioButton
                android:id="@+id/rbTPDesabilitado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbTpDesabilitado" />
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:padding="10dip">

        <Button
            android:id="@+id/btnAddTPAdicionar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="adicionar"
            android:text="@string/btnAdicionar" />

        <Button
            android:id="@+id/btnAddTPLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="limpar"
            android:text="@string/btnLimpar" />
    </LinearLayout>

</RelativeLayout>